--- a/includes/tupperbuild/package.json
+++ b/includes/tupperbuild/package.json
@@ -9,8 +9,9 @@
   "author": "Chris Wessels <undefined.za@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "progress": "^1.1.8",
+    "async": "^0.9.0",
+    "lodash": "^3.8.0",
     "node-apt-get": "^0.1.1",
-    "lodash": "^3.8.0"
+    "progress": "^1.1.8"
   }
 }
