--- a/includes/tupperbuild/package.json
+++ b/includes/tupperbuild/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^0.9.0",
+    "https": "^1.0.0",
     "lodash": "^3.8.0",
     "node-apt-get": "^0.1.1",
     "progress": "^1.1.8"
